<resources>
    <string name="app_name">MessageMate</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">MessageMate</string>
    <string name="info">I</string>
    <string name="information_title">Information:</string>
    <string name="information_text">MessageMate is open source at GitHub (@Qwatrum)\n\nCredits:\nCode: Qwatrum\nDesign: Qwatrum\nIcons: Android Studio (Apache License Version 2.0)\n\nGPT-4o-mini is used for translation and modifying.\n</string>
    <string name="special_characters_title">Special Characters:</string>
    <string name="copy">Copy</string>
    <string name="spice_up_title">Spice up:</string>
    <string name="message_box">Message</string>
    <string name="spice_up_way">Funny, sad, shorter, longer</string>
    <string name="spice_up_btn">Spice up</string>
    <string name="result">Result</string>
    <string name="spice_up_subtext">make it</string>
    <string name="translator_title">Translator:</string>
    <string name="translator_subtext">translate to</string>
    <string name="translator_language">Language</string>
    <string name="translate_btn">Translate</string>
    <string name="loading">loadings…</string>
    <string name="encryption_title">En-/decryption:</string>
    <string name="encryption_subtext">Procedures:</string>
    <string name="decrypt_action_btn">Decrypt</string>
    <string name="encrypt_action_btn">Encrypt</string>
    <string name="decrypt_switch">"Decrypt: "</string>
    <string name="encrypt_switch">"Encrypt: "</string>
    <string name="copied">"Copied"</string>
    <string name="aes_title">En-/decryption: AES</string>
    <string name="encrypt_switch_title">Encrypt:</string>
    <string name="password_hint">Password</string>
    <string name="encrypt_btn">Encrypt</string>
    <string name="caeser_title">En-/decryption: Caeser</string>
    <string name="shift">Shift</string>
    <string name="caeser_description">Caeser:\nStrength: Very Weak</string>
    <string name="use_btn">Use</string>
    <string name="aes_description">AES:\nStrength: Very Strong</string>
    <string name="decryption_failed">Decryption failed. Wrong password or corrupted data</string>
</resources>