<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EncryptionFragment"
    android:id="@+id/fragment_child_container">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="10dp"
        android:textSize="32sp"
        android:text="@string/encryption_title"/>


    <TextView
        android:id="@+id/subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        android:text="@string/encryption_subtext"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:textAlignment="center"
                android:text="@string/caeser_description"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/encrypt_1"
                android:layout_marginTop="2dp"
                android:text="@string/use_btn"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:textAlignment="center"
                android:text="@string/aes_description"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/encrypt_2"
                android:layout_marginTop="2dp"
                android:text="@string/use_btn"/>

        </LinearLayout>

    </ScrollView>


</FrameLayout>